# ONNXObjectDetection

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/cellgraphics/onnxobjectdetection/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/native-detector/: ObjectDetector.cpp  ObjectDetector.h
app/src/main/java/com/cellgraphics/onnxobjectdetection/: MainActivity.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/cellgraphics/onnxobjectdetection/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
